--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
   - title: "Educations"
     url: "/#education"
 
-  - title: "Invited Talks"
+  - title: "Talks"
     url: "/#talks"
 
   - title: "Internships"
