--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   location         : "Delft, Netherlands"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=P_MCg4AAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=-P_MCg4AAAAJ&hl=en&authuser=1"
   email            : "l.xu-18@student.tudelft.nl"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
